--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "@types/node": "12.7.8",
     "@types/react": "16.9.3",
     "@types/react-dom": "16.9.1",
-    "react": "^16.10.0",
-    "react-dom": "^16.10.0",
+    "gh-pages": "2.1.1",
+    "react": "16.10.0",
+    "react-dom": "16.10.0",
     "react-scripts": "3.1.2",
     "typescript": "3.6.3"
   },
@@ -16,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -32,5 +35,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "https://hypeofpipe.github.io/volodymyrvoleniuk.github.io/"
 }
