--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "yarn run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -b master -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -36,5 +36,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://hypeofpipe.github.io/volodymyrvoleniuk.github.io/"
+  "homepage": "https://hypeofpipe.github.io/"
 }
