--- a/package.json
+++ b/package.json
@@ -7,18 +7,18 @@
     "@types/node": "12.7.8",
     "@types/react": "16.9.3",
     "@types/react-dom": "16.9.1",
-    "@types/react-router": "^5.1.1",
-    "@types/react-router-dom": "^5.1.0",
+    "@types/react-router": "5.1.1",
+    "@types/react-router-dom": "5.1.0",
     "@types/styled-components": "4.1.19",
-    "@types/styled-system": "^5.1.2",
+    "@types/styled-system": "5.1.2",
     "gh-pages": "2.1.1",
     "react": "16.10.0",
     "react-dom": "16.10.0",
     "react-router": "5.1.2",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "5.1.2",
     "react-scripts": "3.1.2",
     "styled-components": "4.4.0",
-    "styled-system": "^5.1.2",
+    "styled-system": "5.1.2",
     "system-components": "3.0.3",
     "typescript": "3.6.3"
   },
